--- a/scripts/mapping/configurations/Thymelicus_lineola/ThyLin.config.yaml
+++ b/scripts/mapping/configurations/Thymelicus_lineola/ThyLin.config.yaml
@@ -5,7 +5,7 @@ account: EcoGenetics
 # Name of species being analyzed
 species_name: Thymelicus lineola
 # Path to reference genome file in FASTA format
-reference_genome_path: /faststorage/project/EcoGenetics/BACKUP/reference_genomes/Thymelicus_lineola/GCA_963932265.1_ilThyLine1.1_genomic.fna
+reference_genome_path: /faststorage/project/EcoGenetics/BACKUP/reference_genomes/Thymelicus_lineola/EG_ThyLin_01052024_genomic.fna
 # Directory for intermediary files.
 working_directory_path: /faststorage/project/EcoGenetics/people/Jeppe_Bayer/museomics/steps
 # # Directory for final output files. (If left empty, output file will be placed within 'working_directory_path')
