--- a/scripts/mapping/configurations/Lycaena_virgaureae/LycVir.config.yaml
+++ b/scripts/mapping/configurations/Lycaena_virgaureae/LycVir.config.yaml
@@ -5,7 +5,7 @@ account: EcoGenetics
 # Name of species being analyzed
 species_name: Lycaena virgaureae
 # Path to reference genome file in FASTA format
-reference_genome_path: 
+reference_genome_path: /faststorage/project/EcoGenetics/BACKUP/reference_genomes/Lycaena_virgaureae/EG_LycVir_01052024_genomic_haplotype1.fna
 # Directory for intermediary files.
 working_directory_path: /faststorage/project/EcoGenetics/people/Jeppe_Bayer/museomics/steps
 # # Directory for final output files. (If left empty, output file will be placed within 'working_directory_path')
